Fix for the table scroll bar visibility

--- a/src/styles/_ui-elements.scss
+++ b/src/styles/_ui-elements.scss
@@ -129,7 +129,7 @@
 }
 
 @mixin table() {
-  overflow: scroll;
+  overflow: auto;
 
   table {
     width: 100%;
